--- a/YellowstonePathology/UI/Login/SearchSelectionPage.xaml
+++ b/YellowstonePathology/UI/Login/SearchSelectionPage.xaml
@@ -27,6 +27,7 @@
                         <RowDefinition Height="Auto"></RowDefinition>
                         <RowDefinition Height="Auto"></RowDefinition>
                         <RowDefinition Height="Auto"></RowDefinition>
+                        <RowDefinition Height="Auto"></RowDefinition>
                     </Grid.RowDefinitions>
 
                     <TextBlock Grid.Column="0" Grid.Row="0" Margin="2,2,2,2" VerticalAlignment="Center" FontWeight="Bold" Text="Report No:" />
@@ -48,6 +49,9 @@
 
                     <TextBlock Grid.Column="0" Grid.Row="6" Margin="2,2,2,2" VerticalAlignment="Center" FontWeight="Bold" Text="Invalid Final:" />
                     <Button Grid.Column="2" Grid.Row="6" Width="75" Height="25" Margin="2,2,2,2" Click="ButtonInvalidFinal_Click">Search</Button>
+
+                    <TextBlock Grid.Column="0" Grid.Row="7" Margin="2,2,2,2" VerticalAlignment="Center" FontWeight="Bold" Text="Pending Tests:" />
+                    <Button Grid.Column="2" Grid.Row="7" Width="75" Height="25" Margin="2,2,2,2" Click="ButtonPendingTests_Click">Search</Button>
 
                 </Grid>
             </TabItem>            
