--- a/YellowstonePathology/UI/MainWindow.xaml
+++ b/YellowstonePathology/UI/MainWindow.xaml
@@ -54,6 +54,7 @@
                     <MenuItem Header="Acid Wash Orders" Click="MenuItemAcidWashOrders_Click" />
                     <MenuItem Header="Embedding" Click="MenuItemEmbedding_Click" />
                     <MenuItem Header="Retrospective Reviews" Click="MenuItemRetrospectiveReviews_Click" />
+                    <MenuItem Header="Stains" Click="MenuItemStains_Click" />
                     <MenuItem Header="Ventana Stain Mapping" Click="MenuItemVentanaStainMapping_Click" />
                     <MenuItem Header="Stain Status" Click="MenuItemStainStatus_Click" />
                 </MenuItem>
