--- a/YellowstonePathology/UI/Cytology/CytologyUnsatLetterDialog.xaml
+++ b/YellowstonePathology/UI/Cytology/CytologyUnsatLetterDialog.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 		xmlns:converter="clr-namespace:YellowstonePathology.UI.Converter"
-        Title="Cytology Unsat Letter Dialog" Height="350" Width="350"
+        Title="Cytology Unsat Letter Dialog" Height="300" Width="400"
 		WindowStyle="ToolWindow" WindowStartupLocation="CenterScreen">
     <Grid>
 		<Grid.ColumnDefinitions>
@@ -15,7 +15,8 @@
 			<RowDefinition Height="Auto"></RowDefinition>
 			<RowDefinition Height="Auto"></RowDefinition>
 			<RowDefinition Height="Auto"></RowDefinition>
-			<RowDefinition Height="*"></RowDefinition>
+            <RowDefinition Height="Auto"></RowDefinition>
+            <RowDefinition Height="*"></RowDefinition>
 			<RowDefinition Height="Auto"></RowDefinition>
 		</Grid.RowDefinitions>
 
@@ -41,7 +42,9 @@
 			<TextBlock>Fax Letters</TextBlock>
 		</Button>
 
-		<StackPanel Grid.Column="1" Grid.Row="6" Margin="5" Orientation="Horizontal" HorizontalAlignment="Right">
+        <TextBlock Name="TextBlockStatus" Grid.Column="0" Grid.Row="5" Margin="5" Grid.ColumnSpan="2" Text="{Binding Path=StatusMessage}" />
+
+        <StackPanel Grid.Column="1" Grid.Row="7" Margin="5" Orientation="Horizontal" HorizontalAlignment="Right">
 			<Button Margin="5" Height="30" Width="120" Click="ButtonOk_Click">
 				<TextBlock>OK</TextBlock>
 			</Button>
