--- a/YellowstonePathology/UI/Cytology/CytologyUnsatLetterDialog.xaml
+++ b/YellowstonePathology/UI/Cytology/CytologyUnsatLetterDialog.xaml
@@ -2,12 +2,12 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 		xmlns:converter="clr-namespace:YellowstonePathology.UI.Converter"
-        Title="Cytology Unsat Letter Dialog" Height="300" Width="400"
+        Title="Cytology Unsat Letter Dialog" Height="260" Width="600"
 		WindowStyle="ToolWindow" WindowStartupLocation="CenterScreen">
     <Grid>
 		<Grid.ColumnDefinitions>
-			<ColumnDefinition></ColumnDefinition>
-			<ColumnDefinition></ColumnDefinition>
+			<ColumnDefinition Width="Auto"></ColumnDefinition>
+			<ColumnDefinition Width=" *"></ColumnDefinition>
 		</Grid.ColumnDefinitions>
 		<Grid.RowDefinitions>
 			<RowDefinition Height="Auto"></RowDefinition>
@@ -16,7 +16,6 @@
 			<RowDefinition Height="Auto"></RowDefinition>
 			<RowDefinition Height="Auto"></RowDefinition>
             <RowDefinition Height="Auto"></RowDefinition>
-            <RowDefinition Height="*"></RowDefinition>
 			<RowDefinition Height="Auto"></RowDefinition>
 		</Grid.RowDefinitions>
 
@@ -26,28 +25,26 @@
 		<TextBlock Grid.Column="0" Grid.Row="1" Margin="5" HorizontalAlignment="Right">End Date:</TextBlock>
 		<TextBox Name="TextBoxEndDate" Grid.Column="1" Grid.Row="1" Margin="5" HorizontalAlignment="Stretch" Text="{Binding Path=EndDate, Converter={StaticResource ShortDateConverter}}" />
 
-		<Button Grid.Column="0" Grid.Row="2" Margin="5" Height="30" Width="120" Click="ButtonOpenCaseCount_Click" HorizontalAlignment="Center">
-			<TextBlock>Open Case Count</TextBlock>
-		</Button>
-		<TextBlock Name="TextBlockOpenCaseCount" Grid.Column="1" Grid.Row="2" Margin="5" VerticalAlignment="Center" />
+        <TextBlock Grid.Column="0" Grid.Row="2" Margin="5" HorizontalAlignment="Right">Open Case Count:</TextBlock>
+        <TextBlock Name="TextBlockOpenCaseCount" Grid.Column="1" Grid.Row="2" Margin="5" HorizontalAlignment="Stretch" Text="{Binding Path=OpenCaseCount}" />
 
-		<Button Grid.Column="1" Grid.Row="3" Margin="5" Height="30" Width="120" Click="ButtonNavigateToFolder_Click" HorizontalAlignment="Center">
-			<TextBlock>Navigate To Folder</TextBlock>
-		</Button>
+        <TextBlock Grid.Column="0" Grid.Row="3" Margin="5" HorizontalAlignment="Right">Folder Location:</TextBlock>
+        <Grid Grid.Column="1" Grid.Row="3">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="Auto" />
+            </Grid.ColumnDefinitions>
+            <TextBlock Name="TextBoxFolderLocation" Margin="5" HorizontalAlignment="Stretch" Text="{Binding Path=FolderLocation}" />
+            <Button Grid.Column="1" Grid.Row="3" Margin="2" Height="20" Width="30" HorizontalAlignment="Right" Click="ButtonNavigateToFolder_Click" >...</Button>
+        </Grid>
 
-		<Button Grid.Column="0" Grid.Row="4" Margin="5" Height="30" Width="120" Click="ButtonCreateLetters_Click" HorizontalAlignment="Center">
+        <Button Grid.Column="0" Grid.Row="4" Margin="5" Height="30" Width="120" Click="ButtonCreateLetters_Click" HorizontalAlignment="Center">
 			<TextBlock>Create Letters</TextBlock>
 		</Button>
-		<Button Grid.Column="1" Grid.Row="4" Margin="5" Height="30" Width="120" Click="ButtonFaxLetters_Click" HorizontalAlignment="Center">
+		<Button Grid.Column="0" Grid.Row="5" Margin="5" Height="30" Width="120" Click="ButtonFaxLetters_Click" HorizontalAlignment="Center">
 			<TextBlock>Fax Letters</TextBlock>
 		</Button>
 
-        <TextBlock Name="TextBlockStatus" Grid.Column="0" Grid.Row="5" Margin="5" Grid.ColumnSpan="2" Text="{Binding Path=StatusMessage}" />
-
-        <StackPanel Grid.Column="1" Grid.Row="7" Margin="5" Orientation="Horizontal" HorizontalAlignment="Right">
-			<Button Margin="5" Height="30" Width="120" Click="ButtonOk_Click">
-				<TextBlock>OK</TextBlock>
-			</Button>
-		</StackPanel>
+        <TextBlock Name="TextBlockStatus" Grid.Column="0" Grid.Row="6" Margin="5" Grid.ColumnSpan="2" Text="{Binding Path=StatusMessage}" />
 	</Grid>
 </Window>
