--- a/YellowstonePathology/UI/Billing/PanelSetOrderCPTCodeEntryPage.xaml
+++ b/YellowstonePathology/UI/Billing/PanelSetOrderCPTCodeEntryPage.xaml
@@ -96,7 +96,7 @@
                                 </Grid.ColumnDefinitions>
 
                                 <TextBlock Grid.Column="0" FontSize="14" Text="{Binding Path=DisplayCode}" Margin="2,2,2,2"/>
-                                <!--<TextBlock Grid.Column="1" FontSize="14" Text="{Binding Path=Modifier}" Margin="2,2,2,2"/>-->
+                                <!--<TextBlock Grid.Column="1" FontSize="14" Text="{Binding Path=SVHCDMCode}" Margin="2,2,2,2"/>-->
 
                             </Grid>
                         </Border>
