--- a/YellowstonePathology/UI/Stain/StainListDialog.xaml
+++ b/YellowstonePathology/UI/Stain/StainListDialog.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:YellowstonePathology.UI.Stain"
         mc:Ignorable="d"
-        Title="Stain List" Height="700" Width="400" WindowStartupLocation="CenterScreen" WindowStyle="ToolWindow">
+        Title="Stain List" Height="700" Width="600" WindowStartupLocation="CenterScreen" WindowStyle="ToolWindow">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" />
@@ -24,7 +24,7 @@
             </ListView.ContextMenu>
             <ListView.View>
                 <GridView>
-                    <GridViewColumn DisplayMemberBinding="{Binding Path=StainName}" Header="Stain" Width="85"/>
+                    <GridViewColumn DisplayMemberBinding="{Binding Path=StainName}" Header="Stain" Width="270"/>
                     <GridViewColumn DisplayMemberBinding="{Binding Path=StainerType}" Header="Stainer Type" Width="170"/>
                     <GridViewColumn DisplayMemberBinding="{Binding Path=VentanaBenchMarkId}" Header="Ventana Id" Width="85"/>
                 </GridView>
@@ -34,7 +34,7 @@
         </ListView>
 
         <StackPanel Grid.Column="0" Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Right">
-            <Button Name="ButtonAdd" Grid.Column="0" Grid.Row="2" Width="100" Height="40" HorizontalAlignment="Right" Margin="5,5,5,5" Click="ButtonAdd_Click">Add</Button>
+            <Button Name="ButtonNew" Grid.Column="0" Grid.Row="2" Width="100" Height="40" HorizontalAlignment="Right" Margin="5,0,5,4.6" Click="ButtonNew_Click" VerticalAlignment="Bottom">New</Button>
             <Button Name="ButtonClose" Grid.Column="0" Grid.Row="2" Width="100" Height="40" HorizontalAlignment="Right" Margin="5,5,5,5" Click="ButtonClose_Click">Close</Button>
         </StackPanel>
 
